--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
           target_url: "https://demoqa.com/profile"
           auth_login_url: "https://demoqa.com/login"
           auth_verification_url: "https://demoqa.com/Account/v1/User/3d98685d-46c3-4151-b6af-dd989c76e04e"
-          auth_username: "franco"
+          auth_username: "fran"
           auth_password: "Password1!"
           api_url: "https://api.soos.io/api/"
           verbose: "true"
